--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$light-blue: #D4EBF8;
+$light-blue-hover: #eaf0f3;
+$medium-blue: #1F509A;
+$navy-blue: #0A3981;
+$light-orange: #E38E49
