--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $navy-blue;
+  background-image: linear-gradient(90deg, $navy-blue, $navy-blue-lighter);
   color: $light-blue;
   a {
     font-size: 40px;
