--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,6 +10,7 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $light-blue: #D4EBF8;
+$navy-blue-lighter: #1c58b3;
 $light-blue-hover: #eaf0f3;
 $medium-blue: #1F509A;
 $navy-blue: #0A3981;
