--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#" do %>
+    <%= link_to root_path do %>
       <i class="fa-solid fa-screwdriver-wrench"></i>
     <% end %>
 
