--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New tool</h1>
-<%= simple_form_for @tool do |f| %>
-  <%= f.input :name %>
-  <%= f.input :price%>
-  <%= f.input :description%>
-  <%= f.input :localisation%>
-  <%= f.input :photo%>
-  <%= f.submit "Submit add", class: "btn btn-primary" %>
-<% end %>
+<div class="container">
+<br>
+  <h1>New tool</h1>
+  <%= simple_form_for @tool do |f| %>
+    <%= f.input :name, placeholder: "Nom de l'outil" %>
+    <%= f.input :price, placeholder: "prix en €" %>
+    <%= f.input :description, placeholder: "Informtions supplémentaires" %>
+    <%= f.input :localisation, placeholder: "Votre adresse" %>
+    <%= f.input :photo, placeholder: "Votre photo" %>
+    <%= f.submit "Submit add", class: "btn btn-primary" %>
+  <% end %>
+  <br>
+</div>
