front form new tool

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,4 +14,5 @@ $navy-blue-lighter: #1c58b3;
 $light-blue-hover: #eaf0f3;
 $medium-blue: #1F509A;
 $navy-blue: #0A3981;
-$light-orange: #E38E49
+$light-orange: #E38E49;
+$canard: #048b9a;
