manque un guilleme

--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -9,7 +9,7 @@
        <%= simple_form_for @tool do |f| %>
         <%= f.input :name, placeholder: "Nom de l'outil" %>
         <%= f.input :price, placeholder: "prix en €"%>
-        <%= f.input :description, placeholder: "Informtions supplémentaires%>
+        <%= f.input :description, placeholder: "Informtions supplémentaires"%>
         <%= f.input :localisation, placeholder: "Votre adresse"%>
         <%= f.input :photo, placeholder: "Votre photo"%>
         <%= f.submit "Publier l'annonce", class: "btn btn-primary" %>
@@ -17,4 +17,3 @@
     </div>
   </div>
 </div>
-
