--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,6 +4,7 @@
   color: white;
   padding: 5px 10px;
   border-radius: 4px;
+  width: 100%;
 
   &:hover {
     background-color: rgb(50, 50, 50);
@@ -11,12 +12,9 @@
   }
 }
 
-.text-navy-blue {
-  color: $navy-blue;
-}
-
 .form-input {
   padding: 2em;
+  width: 50%;
 }
 
 .bg-img-sign {
@@ -30,4 +28,5 @@
   color: white;
   text-align: start;
   text-shadow: 1px 1px 2px black;
+  width: 50%;
 }
