--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <h1>Nouvel outil</h1>
-  <div class="d-flex bg-light rounded-5">
+  <div class="d-flex bg-light rounded-5 m-5">
     <div class="bg-img-sign rounded-5">
       <h2>Créez votre nouvel annonce</h2>
       <p>Louer plus vite, gagner plus vite</p>
     </div>
     <div class="form-input">
+      <h2>Nouvel annonce</h2>
       <%= simple_form_for @tool do |f| %>
         <%= f.input :name %>
         <%= f.input :price%>
