--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,6 @@
 
 
 body {
-  background: black;
-  background: linear-gradient(204deg, #663813 0%, #e38e49 80%);
+  background: #e38e49;
+  // background: linear-gradient(204deg, #ffc59a 0%, #e38e49 80%);
 }
