--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,6 +5,7 @@
   padding: 5px 10px;
   border-radius: 4px;
   width: 100%;
+  margin-top: 5px;
 
   &:hover {
     background-color: rgb(50, 50, 50);
@@ -29,4 +30,10 @@
   text-align: start;
   text-shadow: 1px 1px 2px black;
   width: 50%;
+}
+
+.form-all {
+  display: flex;
+  background-color: $light;
+  margin: 50px 0px;
 }
