--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -11,7 +11,7 @@
         <%= f.input :description, placeholder: "Informtions supplémentaires" %>
         <%= f.input :localisation, placeholder: "Votre adresse"%>
         <%= f.input :photo, placeholder: "Votre photo" %>
-        <%= f.submit "Publier l'annonce", class: "btn" %>
+        <%= f.submit "Publier l'annonce", class: "button-form" %>
       <% end %>
     </div>
   </div>
