--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,20 @@
 @import "pages/index";
 
 
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Fugaz+One&display=swap');
+
+
 
 body {
-  background: #e38e49;
+  background: #e6e2df;
   // background: linear-gradient(204deg, #ffc59a 0%, #e38e49 80%);
 }
+
+.kiloutools-nav {   // bold 800 italic
+  margin: 0;
+  font-family: "Alegreya Sans", sans-serif;
+  font-weight: 800;
+  font-size: 25px;
+  font-style: italic;
+ }
+;
