--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,8 +11,7 @@ $light-gray: #F4F4F4;
 
 $light-blue: #D4EBF8;
 $navy-blue-lighter: #1c58b3;
-$light-blue-hover: #eaf0f3;
 $medium-blue: #1F509A;
 $navy-blue: #0A3981;
 $light-orange: #E38E49;
-$canard: #048b9a;
+$light-orange-hover: #be773d;
