--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -11,7 +11,7 @@
         <%= f.input :price%>
         <%= f.input :description%>
         <%= f.input :localisation%>
-        <%= f.input :photo%>
+        <%= f.input :photo, as: :file %>
         <%= f.submit "Valider les modifications", class: "button-form" %>
       <% end %>
 
