--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
   <body>
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
-    
-    <%= yield %>
+
+    <div style="min-height: 78vh; ">
+      <%= yield %>
+    </div>
     <%= render "shared/footer" %>
   </body>
 </html>
