--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,9 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(212, 235, 248,0.3);
+  // position: absolute;
+  // width: 100%;
+  // bottom: 0;
 }
 .footer-links {
   display: flex;
