--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -11,7 +11,7 @@
 
             <div class="tool-details">
               <p><strong>Prix :</strong> <%= number_to_currency(@tool.price, unit: "€") %></p>
-              <p><strong>Descriptions :</strong> <%= @tool.description %></p>
+              <p><strong>Description :</strong> <%= @tool.description %></p>
               <p><strong>Localisation :</strong> <%= @tool.localisation %></p>
             </div>
 
