--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Fugaz+One&display=swap');
 
 
-
 body {
   background: #e6e2df;
   // background: linear-gradient(204deg, #ffc59a 0%, #e38e49 80%);
@@ -25,10 +24,39 @@ body {
 	min-height: 100vh;
 }
 
-.kiloutools-nav {   // bold 800 italic
-  margin: 0;
-  font-family: "Alegreya Sans", sans-serif;
-  font-weight: 800;
-  font-size: 25px;
-  font-style: italic;
- }
+  .kiloutools-nav {   // bold 800 italic
+    margin: 0;
+    font-family: "Alegreya Sans", sans-serif;
+    font-weight: 800;
+    font-size: 25px;
+    font-style: italic;
+  }
+
+ .banner {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+
+  .banner-image {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    display: block;
+    filter: brightness(50%);
+  }
+
+  .banner-text {
+    font-family: "Alegreya Sans", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+    font-style: italic;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+    width: 100%;
+  }
+}
