--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,6 +1,13 @@
+<div class="banner mb-5">
+  <img src="<%= asset_path('banniere.jpg') %>" alt="Bannière" class="banner-image">
+   <div class="banner-text kiloutools-nav">
+    <p>LOUEZ VOS OUTILS PRÈS DE CHEZ VOUS !</p>
+  </div>
+</div>
+
    <div class="containergrid">
     <% @tools.each do |tool| %>
-      <%= link_to tool, class:"p-0" do  %>
+      <%= link_to tool, class:"p-0 text-decoration-none" do  %>
         <div class="card-trip ">
           <%= cl_image_tag tool.photo.key %>
           <div class="card-trip-infos">
@@ -8,7 +15,7 @@
               <h2> <%= tool.name %></h2>
                 <p> <%= tool.description %></p>
             </div>
-          <h2 class="card-trip-pricing"> <%= tool.price %> € </h2>
+          <h2 class="card-trip-pricing"><%= tool.price %>€</h2>
         </div>
       </div>
       <% end  %>
