--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,7 @@
       <%= yield %>
     </div>
     <%= render "shared/footer" %>
+
+    <%= Rails.env.product? ? "" : console%>
   </body>
 </html>
