localisation to address

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -8,7 +8,7 @@
         <div class="card-trip-infos">
           <div>
             <h2> <%= user_booking.tool.name %></h2>
-              <p> <%= user_booking.tool.localisation %></p>
+              <p> <%= user_booking.tool.address %></p>
           </div>
         <h2 class="card-trip-pricing"> <%= user_booking.tool.price %> € </h2>
       </div>
