--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :name %>
         <%= f.input :price%>
         <%= f.input :description%>
-        <%= f.input :localisation%>
+        <%= f.input :address%>
         <%= f.input :photo, as: :file %>
         <%= f.submit "Valider les modifications", class: "button-form" %>
       <% end %>
