--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :name, placeholder: "Nom de l'outil" %>
         <%= f.input :price, placeholder: "prix en €" %>
         <%= f.input :description, placeholder: "Informtions supplémentaires" %>
-        <%= f.input :localisation, placeholder: "Votre adresse"%>
+        <%= f.input :address, placeholder: "Votre adresse"%>
         <%= f.input :photo, as: :file, placeholder: "Votre photo" %>
         <%= f.submit "Publier l'annonce", class: "button-form" %>
       <% end %>
