--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="form-all rounded-5 shadow">
     <div class="bg-img-sign rounded-5">
       <h2>Modifier la description</h2>
-      <p> Votre outils</p>
+      <p> Votre outil</p>
     </div>
     <div class="form-input">
 
