--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -40,7 +40,7 @@
                                           <%= f.input :end_date,
                                               as: :string,
                                               input_html: { data: { controller: "datepicker", datepicker_target: "endDate" } } %>
-                                              <%= f.submit %>
+                                              <%= f.submit "Réserver", class: "btn btn-primary"%>
                                         <% end  %>
                         </div>
                       </div>
