--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -15,3 +15,37 @@
   height: 100%;
   object-fit: cover;
 }
+
+.card-status-booking {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 35em;
+  height: 6em;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;
+}
+
+.card-status-detail {
+  font-size: 16px;
+  width: 18em;
+}
+
+.card-booking-img-container {
+  max-width: 5em;
+  min-height: 100%;
+  border: black 1px solid;
+}
+.card-booking-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.button-status-add {
+  background-color: rgb(36, 168, 89);
+}
+
+.button-status-reject {
+  background-color: rgb(176, 21, 21);
+}
