--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -20,9 +20,11 @@
                 <div class="tool-actions">
 
                   <!-- Button trigger modal -->
+                  <% unless @tool.user == current_user %>
                   <button type="button" class="btn btn-search" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Reserver
                   </button>
+                  <% end %>
                   <!-- Modal -->
                   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
