--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -3,8 +3,9 @@
 
     <div class="container">
         <div class="card-product rounded-5 shadow row">
-          <div class="col-6 left-side p-0" > <%= image_tag @tool.photo, class: "img-size rounded-5" %> </div>
-
+          <div class="col-6 left-side p-0" >
+          <div class='div-img rounded-5'><%= image_tag @tool.photo, class: "img img-size rounded-5 img-zoom object-fit-cover" %></div>
+          </div>
           <div class="col-6 p-4">
             <h1 class="tool-title"><%= @tool.name %></h1>
 
@@ -17,10 +18,10 @@
 
 <br>
               <div class="d-flex justify-content-around" >
-                <div class="tool-actions">
+
 
                   <!-- Button trigger modal -->
-                  <button type="button" class="btn btn-search" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <button type="button" class="btn-search btn-45" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Reserver
                   </button>
                   <!-- Modal -->
@@ -40,18 +41,15 @@
                                           <%= f.input :end_date,
                                               as: :string,
                                               input_html: { data: { controller: "datepicker", datepicker_target: "endDate" } } %>
-                                              <%= f.submit "Réserver", class: "btn btn-primary"%>
+                                              <%= f.submit "Réserver", class: "btn btn-primary w-100"%>
                                         <% end  %>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
 
+                  <%= link_to "Retour à la liste", root_path, class: "btn btn-back btn-45" %>
 
-                <div class="back-button">
-                  <%= link_to "Retour à la liste", root_path, class: "btn btn-secondary" %>
-                </div>
               </div>
 
           </div>
