--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -24,7 +24,6 @@
   height: 6em;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  margin-bottom: 15px;
 }
 
 .card-status-detail {
@@ -42,10 +41,32 @@
   width: 100%;
   height: 100%;
 }
+
+.button-status {
+  text-decoration: none;
+  color: white;
+  padding: 1em;
+  width: 3em;
+  height: 3em;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
 .button-status-add {
   background-color: rgb(36, 168, 89);
+  border:rgb(36, 168, 89) 1px solid;
+  &:hover {
+    background-color: rgb(25, 121, 63);
+    border:rgb(25, 121, 63) 1px solid;
+  }
 }
 
 .button-status-reject {
   background-color: rgb(176, 21, 21);
+  border:rgb(176, 21, 21) 1px solid;
+  &:hover {
+    background-color: rgb(130, 21, 21);
+    border:rgb(130, 21, 21) 1px solid;
+  }
 }
+
