--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -38,11 +38,11 @@
                         </div>
                         <div class="modal-body" data-controller="datepicker">
                         <%= simple_form_for [@tool, @booking] do |f| %>
-                                          <%= f.input :start_date,
+                                          <%= f.input :start_date, label:'Début de la réservation',
                                               as: :string,
                                               input_html: { data: {datepicker_target: "startDate" } } %>
 
-                                          <%= f.input :end_date,
+                                          <%= f.input :end_date, label:'Fin de la réservation',
                                               as: :string,
                                               input_html: { data: { datepicker_target: "endDate" } } %>
                                               <%= f.submit "Réserver", class: "btn btn-primary w-100"%>
