--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
         <% if user_signed_in? %>
           <li class="nav-item">
           <div class="d-flex align-items-center">
-            <%= link_to "+", new_tool_path, class: "btn btn-primary me-3 rounded" %>
+            <%= link_to "Ajouter une annonce", new_tool_path, class: "btn btn-primary me-3 rounded" %>
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
