--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -18,6 +18,12 @@
   </div>
 </div>
 
+<% if params[:query].present? && @tools.empty? %>
+  <div class="text-center text-muted fst-italic mt-2">
+    Aucune outil correspondant.
+  </div>
+<% end %>
+
    <div class="containergrid">
     <% @tools.each do |tool| %>
       <%= link_to tool, class:"p-0 text-decoration-none" do  %>
