--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -33,7 +33,7 @@
 
 .card-booking-img-container {
   max-width: 5em;
-  min-height: 100%;
+  height: 100%;
   border: black 1px solid;
 }
 .card-booking-img {
@@ -69,4 +69,3 @@
     border:rgb(130, 21, 21) 1px solid;
   }
 }
-
