--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -18,25 +18,31 @@
   </div>
 </div>
 
-   <div class="containergrid">
-    <% @tools.each do |tool| %>
-      <%= link_to tool, class:"p-0 text-decoration-none" do  %>
-        <div class="card-trip ">
-          <%= cl_image_tag tool.photo.key %>
-          <div class="card-trip-infos">
-            <div>
-              <h2> <%= tool.name %></h2>
-                <p> <%= tool.description %></p>
-            </div>
-            <h2 class="card-trip-pricing"><%= tool.price %>€</h2>
+  <div class="containergrid">
+  <% @tools.each do |tool| %>
+    <%= link_to tool, class:"p-0 text-decoration-none" do  %>
+      <div class="card-trip ">
+        <%= cl_image_tag tool.photo.key %>
+        <div class="card-trip-infos">
+          <div>
+            <h2> <%= tool.name %></h2>
+              <p> <%= tool.description %></p>
           </div>
+          <h2 class="card-trip-pricing"><%= tool.price %>€</h2>
         </div>
-      <% end %>
+      </div>
     <% end %>
-  </div>
+  <% end %>
+</div>
 
-  <div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class="container mb-5">
+  <h2 class="my-4">Trouvez un outil proche de chez vous 🏠</h2>
+  <div class="card rounded-5 shadow">
+    <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+    class="rounded-5">
+    </div>
   </div>
+</div>
