--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -18,6 +18,7 @@
 
 .btn {
   white-space: nowrap;
+}
 
 .btn-back {
   background-color: rgb(226, 226, 226);
@@ -30,3 +31,4 @@
 
 .btn-45 {
   width: 45%;
+}
