--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -18,7 +18,7 @@
 
 .btn {
   white-space: nowrap;
-
+}
 .btn-back {
   background-color: rgb(226, 226, 226);
   border: rgb(207, 207, 207) solid 1px;
@@ -30,3 +30,4 @@
 
 .btn-45 {
   width: 45%;
+}
