--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -10,3 +10,10 @@
     <%= alert %>
   </div>
 <% end %>
+
+<% if flash[notice:] %>
+  <div class="alert alert-success alert-dismissible fade show m-1" role="alert">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <p>"La location a bien été <%= params[:status] %>"</p>
+  </div>
+<% end %>
