--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -28,7 +28,7 @@
     <% @tools.each do |tool| %>
       <%= link_to tool, class:"p-0 text-decoration-none" do  %>
         <div class="card-trip ">
-          <%= cl_image_tag tool.photo.key %>
+          <%= cl_image_tag(tool.photo.attached? ? tool.photo.key : "pince.jpg") %>
           <div class="card-trip-infos">
             <div>
               <h2> <%= tool.name %></h2>
