changement des typos h1 et h2

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -13,7 +13,7 @@
             <div class="tool-details">
               <p><strong>Prix :</strong> <%= number_to_currency(@tool.price, unit: "€") %></p>
               <p><strong>Description :</strong> <%= @tool.description %></p>
-              <p><strong>address :</strong> <%= @tool.address %></p>
+              <p><strong>Addresse :</strong> <%= @tool.address %></p>
             </div>
 
 <br>
