--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="row justify-content-center">
+<div class="d-flex justify-content-center">
   <div class="col-sm-8 my-3">
     <%= form_with url: root_path, method: :get, class: "input-group" do %>
       <%= text_field_tag :query,
