--- a/app/assets/stylesheets/components/_img_zoom.scss
+++ b/app/assets/stylesheets/components/_img_zoom.scss
@@ -1,7 +1,13 @@
 .div-img {
   overflow: hidden;
-  min-height: 100%;
-  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+.img-size {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .img-zoom {
