--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -24,7 +24,7 @@
               <p> Du <%= user_booking.start_date %> au <%= user_booking.end_date %></p>
               <p> <%= user_booking.status %></p>
             </div>
-          <h2 class="card-trip-pricing"> <em>Total</em> :  <%= user_booking.tool.price * (user_booking.end_date - user_booking.start_date).to_i %> € </h2>
+          <h2 class="card-trip-pricing"> <%= user_booking.price %> € </h2>
         </div>
       </div>
       <%# <% end  %>
@@ -44,7 +44,18 @@
     <% @owner_bookings.each do |owner_booking|  %>
       <% if owner_booking.status == "En attente"%>
         <div class="card-status-booking rounded-5 p-2 mb-3">
-          <div class="card-booking-img-container rounded-4"><%= cl_image_tag owner_booking.tool.photo.key, class: "card-booking-img rounded-4" %></div>
+          <div class="card-booking-img-container rounded-4">
+
+            <% if owner_booking.tool.photo.attached?  %>
+              <%=  cl_image_tag owner_booking.tool.photo.key, class: "card-booking-img rounded-4" %>
+              <% else %>
+              <%= image_tag "pince.jpg", class: "card-booking-img rounded-4" %>
+            <% end %>
+
+
+
+
+          </div>
           <div class="card-status-detail">
             <p class="m-0"><%= owner_booking.tool.name %></p>
             <p class="m-0">Du <%= owner_booking.start_date %> au <%= owner_booking.end_date %></p>
@@ -75,7 +86,11 @@
     <% @tools.each do |tool|  %>
       <%= link_to tool_path(tool.id), class: "text-decoration-none" do %>
         <div class="card-trip ">
+        <% if tool.photo.key %>
           <%= cl_image_tag tool.photo.key %>
+        <% else %>
+        <%= image_tag "pince.jpg" %>
+        <% end %>
           <div class="card-trip-infos">
             <div>
               <h2> <%= tool.name %></h2>
