--- a/app/assets/stylesheets/components/_containergrid.scss
+++ b/app/assets/stylesheets/components/_containergrid.scss
@@ -1,5 +1,5 @@
 .containergrid {
-  padding: 0 100px;
+  // padding: 0 100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 16px;
