--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   justify-content: space-between;
   background-image: linear-gradient(90deg, $navy-blue, $navy-blue-lighter);
   color: $light-blue;
-  a {
+  > a {
     font-size: 20px;
     color: $light-blue;
     text-decoration: none;
