--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,31 +1,27 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container">
 
-    <%= link_to root_path do %>
-      <i class="fa-solid fa-screwdriver-wrench"></i>
-
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="kiloutools-nav"> KILOUTOOLS </div>
+    <%= link_to root_path, class:"link-to" do %>
+      <div class="container-fluid kiloutools-nav">
+        <i class="fa-solid fa-screwdriver-wrench"></i> KILOUTOOLS
+      </div>
     <% end %>
-    </div>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
-          <div class="d-flex align-items-center">
-            <%= link_to "Ajouter une annonce", new_tool_path, class: "btn btn-primary me-3 rounded" %>
+            <div class="d-flex align-items-center">
+              <%= link_to "Ajouter une annonce", new_tool_path, class: "btn btn-primary me-3 rounded" %>
+            </div>
           </li>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+            </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-              </div>
             </div>
           </li>
         <% else %>
