--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -24,23 +24,24 @@
   </div>
 <% end %>
 
-<div class="containergrid">
-  <% @tools.each do |tool| %>
-    <%= link_to tool, class:"p-0 text-decoration-none" do  %>
-      <div class="card-trip ">
-        <%= cl_image_tag(tool.photo.attached? ? tool.photo.key : "pince.jpg") %>
-        <div class="card-trip-infos">
-          <div>
-            <h2> <%= tool.name %></h2>
-             <p> <%= tool.description %></p>
+<div class="container">
+  <div class="containergrid">
+    <% @tools.each do |tool| %>
+      <%= link_to tool, class:"p-0 text-decoration-none" do  %>
+        <div class="card-trip ">
+          <%= cl_image_tag(tool.photo.attached? ? tool.photo.key : "pince.jpg") %>
+          <div class="card-trip-infos">
+            <div>
+              <h2> <%= tool.name %></h2>
+              <p> <%= tool.description %></p>
+            </div>
+            <h2 class="card-trip-pricing"><%= tool.price %>€</h2>
           </div>
-          <h2 class="card-trip-pricing"><%= tool.price %>€</h2>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
-
 
 <div class="container mb-5">
   <h2 class="my-4">Trouvez un outil proche de chez vous 🏠</h2>
